# c_opengl_playground

./: .gitignore  CMakeLists.txt  main.c  main.cpp
libs/cglm-0.9.4/: meson.build
libs/yaml-cpp-0.8.0/: CMakeLists.txt
libs/yaml-cpp-0.8.0/test/gtest-1.11.0/docs/: advanced.md
src/: func.cpp  func.hpp  gl_includes.hpp  graph.cpp  graph.hpp  main.c  main.cpp  nocopy.hpp  renderer.c  renderer.cpp  renderer.h  renderer.hpp  sdl_includes.h  window.c  window.cpp  window.h  window.hpp
src/ogl/: shader.cpp  shader.hpp  texture.cpp  texture.hpp  vao.cpp  vao.hpp
src/utils/: glm_includes.hpp  nocopy.hpp  utils.cpp  utils.hpp
tests/: sample.cpp
